--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -8,7 +8,7 @@
 @use 'tokens' as *;
 
 /* The CSS variables can be access as name-color,
-  example: var(--surface-1-color). */
+  example: var(--bg-1-color). */
 
 $color-schemes: (
   light: (
