--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -8,23 +8,6 @@
 
 // << Insert your base styles here >>
 
-// $olive: (
-//   surface-1: koi.theme(colors, green, 9),
-//   surface-2: koi.theme(colors, green, 8),
-//   surface-3: koi.theme(colors, green, 7),
-//   surface-4: koi.theme(colors, green, 6),
-//   text-1: koi.theme(colors, green, 0),
-//   text-2: koi.theme(colors, green, 1),
-//   text-3: koi.theme(colors, green, 2),
-//   text-4: koi.theme(colors, green, 3),
-// );
-
-// [color-scheme='olive'],
-// [data-theme='olive'] {
-//   color-scheme: olive;
-//   @include koi.generate-color-scheme-css-vars($olive);
-// }
-
 body {
   @include koi.container($padding: true, $center: true);
   @include koi.responsive-margin-block;
@@ -36,12 +19,6 @@ h1 {
   @include koi.text-size(4xl);
   font-family: koi.font-family(serif);
   color: koi.accent(5);
-  //   // color: koi.color(primary);
-  //   // color: koi.color(blue, 3);
-  //   // color: koi.color(blue, 8, 0.5);
-  //   // color: koi.accent(5);
-  //   // color: var(--color-accent-8);
-  //   // color: hsl(var(--color-hsl-accent-8));
 }
 
 .wrapper {
@@ -49,73 +26,9 @@ h1 {
   @include koi.responsive-margin-block;
   background-color: koi.color(surface, 2);
   border: 2px solid koi.color(gray);
-  // @include koi.responsive-padding;
-  // margin-top: koi.spacing(md);
-  // margin-top: koi.rem(48);
-  // margin-top: koi.spacing(48);
-  // padding: koi.theme(spacing, 32);
-  // border-radius: koi.radius();
-  // @include koi.shadow(sm);
-  // background-color: koi.color(gray, 8);
 
   &:hover {
+    background-color: koi.color(surface, 3);
     border-color: koi.accent(5);
-    // background-color: koi.color(gray, 1);
-    // background-color: var(--surface-2);
-    // @include koi.transition-colors(koi.theme(duration, slow));
-    // border-color: koi.color(primary);
-
-    // @include koi.dark {
-    //   background-color: koi.color(gray, 8);
-    // }
   }
 }
-
-// .loaders {
-//   display: flex;
-//   align-items: center;
-//   gap: 24px;
-//   background-color: koi.color(gray, 9);
-//   border-color: koi.accent(5);
-
-//   &:hover {
-//     background-color: koi.color(gray, 8);
-//   }
-// }
-
-// .text {
-//   line-height: koi.leading(relaxed);
-// }
-
-// .the-stack {
-//   --koi-spacer: 1.5rem;
-// }
-
-// .box {
-//   // --koi-transition-duration: 2s;
-//   width: 82px;
-//   height: 82px;
-//   color: koi.color(white);
-//   background-color: koi.accent(5);
-//   @include koi.rounded(md);
-//   @include koi.transition((transform, background-color));
-
-//   @include koi.dark {
-//     color: koi.color(black);
-//     background-color: koi.accent(6);
-//   }
-
-//   &:hover {
-//     background-color: koi.color(green, 6);
-//     transform: translateY(-15%) scale(1.05);
-//   }
-// }
-
-// .is-box {
-//   @include koi.box($bg-color: koi.color(blue, 2), $padding: true, $rounded: lg, $shadow: lg);
-//   @include koi.margin-block(md);
-
-//   @include koi.dark {
-//     background-color: koi.accent(9);
-//   }
-// }
