--- a/scss/theme/tokens/_colors.scss
+++ b/scss/theme/tokens/_colors.scss
@@ -3,24 +3,24 @@
 // --------------------------------
 
 $colors: (
-  white: #fff,
-  black: #000,
+  white: #ffffff,
+  black: #000000,
   primary: (
-    0: #effef9,
-    1: #cafded,
-    2: #95fadd,
-    3: #58f0ca,
-    4: #24d7b0,
+    0: #f0fffa,
+    1: #c9fded,
+    2: #94fadd,
+    3: #56f0ca,
+    4: #24d6af,
     5: #0dbf9b,
-    6: #08997f,
-    7: #0b7a67,
-    8: #0e6154,
-    9: #115046,
+    6: #089b80,
+    7: #0b7967,
+    8: #0e6256,
+    9: #115045,
   ),
   gray: (
     0: #fafafa,
     1: #f5f5f5,
-    2: #e5e5e5,
+    2: #e6e6e6,
     3: #d4d4d4,
     4: #a3a3a3,
     5: #737373,
@@ -30,54 +30,208 @@ $colors: (
     9: #171717,
   ),
   red: (
-    0: #fef2f2,
-    1: #fee2e2,
-    2: #fecaca,
-    3: #fca5a5,
-    4: #f87171,
-    5: #ef4444,
-    6: #dc2626,
-    7: #b91c1c,
-    8: #991b1b,
-    9: #7f1d1d,
+    0: #fef1f1,
+    1: #fee1e1,
+    2: #fec8c8,
+    3: #fca6a6,
+    4: #f87272,
+    5: #ef4343,
+    6: #dc2828,
+    7: #ba1c1c,
+    8: #981b1b,
+    9: #811d1d,
   ),
   yellow: (
-    0: #fefce8,
+    0: #fefce7,
     1: #fef9c3,
-    2: #fef08a,
-    3: #fde047,
-    4: #facc15,
-    5: #eab308,
-    6: #ca8a04,
-    7: #a16207,
-    8: #854d0e,
-    9: #713f12,
+    2: #fef08b,
+    3: #fddf49,
+    4: #facc14,
+    5: #fbe8b0,
+    6: #c88a04,
+    7: #a26107,
+    8: #864e0e,
+    9: #733f12,
   ),
   green: (
-    0: #f0fdf4,
-    1: #dcfce7,
+    0: #f3fcf5,
+    1: #defce9,
     2: #bbf7d0,
-    3: #86efac,
+    3: #85efac,
     4: #4ade80,
-    5: #22c55e,
-    6: #16a34a,
-    7: #15803d,
-    8: #166534,
-    9: #14532d,
+    5: #21c45d,
+    6: #16a249,
+    7: #157f3c,
+    8: #166434,
+    9: #14522d,
   ),
   blue: (
-    0: #eff6ff,
-    1: #dbeafe,
-    2: #bfdbfe,
-    3: #93c5fd,
-    4: #60a5fa,
-    5: #3b82f6,
-    6: #2563eb,
-    7: #1d4ed8,
-    8: #1e40af,
-    9: #1e3a8a,
+    0: #f0f6ff,
+    1: #dcebfe,
+    2: #bedbfe,
+    3: #91c3fd,
+    4: #61a6fa,
+    5: #3c83f6,
+    6: #2463eb,
+    7: #1d4fd7,
+    8: #1e3fae,
+    9: #1e3b8a,
   ),
 ) !default;
+
+// $colors: (
+//   white: 0 0% 100%,
+//   black: 0 0% 0%,
+//   primary: (
+//     0: 160 100% 97%,
+//     1: 161 93% 89%,
+//     2: 163 91% 78%,
+//     3: 165 84% 64%,
+//     4: 167 71% 49%,
+//     5: 168 87% 40%,
+//     6: 169 90% 32%,
+//     7: 170 83% 26%,
+//     8: 171 75% 22%,
+//     9: 170 65% 19%,
+//   ),
+//   gray: (
+//     0: 0 0% 98%,
+//     1: 0 0% 96%,
+//     2: 0 0% 90%,
+//     3: 0 0% 83%,
+//     4: 0 0% 64%,
+//     5: 0 0% 45%,
+//     6: 0 0% 32%,
+//     7: 0 0% 25%,
+//     8: 0 0% 15%,
+//     9: 0 0% 9%,
+//   ),
+//   red: (
+//     0: 0 86% 97%,
+//     1: 0 93% 94%,
+//     2: 0 96% 89%,
+//     3: 0 94% 82%,
+//     4: 0 91% 71%,
+//     5: 0 84% 60%,
+//     6: 0 72% 51%,
+//     7: 0 74% 42%,
+//     8: 0 70% 35%,
+//     9: 0 63% 31%,
+//   ),
+//   yellow: (
+//     0: 55 92% 95%,
+//     1: 55 97% 88%,
+//     2: 53 98% 77%,
+//     3: 50 98% 64%,
+//     4: 48 96% 53%,
+//     5: 45 93% 47%,
+//     6: 41 96% 40%,
+//     7: 35 92% 33%,
+//     8: 32 81% 29%,
+//     9: 28 73% 26%,
+//   ),
+//   green: (
+//     0: 138 63% 97%,
+//     1: 141 84% 93%,
+//     2: 141 79% 85%,
+//     3: 142 77% 73%,
+//     4: 142 69% 58%,
+//     5: 142 71% 45%,
+//     6: 142 76% 36%,
+//     7: 142 72% 29%,
+//     8: 143 64% 24%,
+//     9: 144 61% 20%,
+//   ),
+//   blue: (
+//     0: 214 100% 97%,
+//     1: 214 95% 93%,
+//     2: 213 97% 87%,
+//     3: 212 96% 78%,
+//     4: 213 94% 68%,
+//     5: 217 91% 60%,
+//     6: 221 83% 53%,
+//     7: 224 76% 48%,
+//     8: 226 71% 40%,
+//     9: 224 64% 33%,
+//   ),
+// ) !default;
+
+// $colors: (
+//   white: hsl(0, 0%, 100%),
+//   black: hsl(0, 0%, 0%),
+//   primary: (
+//     0: hsl(160, 100%, 97%),
+//     1: hsl(161, 93%, 89%),
+//     2: hsl(163, 91%, 78%),
+//     3: hsl(165, 84%, 64%),
+//     4: hsl(167, 71%, 49%),
+//     5: hsl(168, 87%, 40%),
+//     6: hsl(169, 90%, 32%),
+//     7: hsl(170, 83%, 26%),
+//     8: hsl(171, 75%, 22%),
+//     9: hsl(170, 65%, 19%),
+//   ),
+//   gray: (
+//     0: hsl(0, 0%, 98%),
+//     1: hsl(0, 0%, 96%),
+//     2: hsl(0, 0%, 90%),
+//     3: hsl(0, 0%, 83%),
+//     4: hsl(0, 0%, 64%),
+//     5: hsl(0, 0%, 45%),
+//     6: hsl(0, 0%, 32%),
+//     7: hsl(0, 0%, 25%),
+//     8: hsl(0, 0%, 15%),
+//     9: hsl(0, 0%, 9%),
+//   ),
+//   red: (
+//     0: hsl(0, 86%, 97%),
+//     1: hsl(0, 93%, 94%),
+//     2: hsl(0, 96%, 89%),
+//     3: hsl(0, 94%, 82%),
+//     4: hsl(0, 91%, 71%),
+//     5: hsl(0, 84%, 60%),
+//     6: hsl(0, 72%, 51%),
+//     7: hsl(0, 74%, 42%),
+//     8: hsl(0, 70%, 35%),
+//     9: hsl(0, 63%, 31%),
+//   ),
+//   yellow: (
+//     0: hsl(55, 92%, 95%),
+//     1: hsl(55, 97%, 88%),
+//     2: hsl(53, 98%, 77%),
+//     3: hsl(50, 98%, 64%),
+//     4: hsl(48, 96%, 53%),
+//     5: hsl(45, 93%, 47%),
+//     6: hsl(41, 96%, 40%),
+//     7: hsl(35, 92%, 33%),
+//     8: hsl(32, 81%, 29%),
+//     9: hsl(28, 73%, 26%),
+//   ),
+//   green: (
+//     0: hsl(138, 63%, 97%),
+//     1: hsl(141, 84%, 93%),
+//     2: hsl(141, 79%, 85%),
+//     3: hsl(142, 77%, 73%),
+//     4: hsl(142, 69%, 58%),
+//     5: hsl(142, 71%, 45%),
+//     6: hsl(142, 76%, 36%),
+//     7: hsl(142, 72%, 29%),
+//     8: hsl(143, 64%, 24%),
+//     9: hsl(144, 61%, 20%),
+//   ),
+//   blue: (
+//     0: hsl(214, 100%, 97%),
+//     1: hsl(214, 95%, 93%),
+//     2: hsl(213, 97%, 87%),
+//     3: hsl(212, 96%, 78%),
+//     4: hsl(213, 94%, 68%),
+//     5: hsl(217, 91%, 60%),
+//     6: hsl(221, 83%, 53%),
+//     7: hsl(224, 76%, 48%),
+//     8: hsl(226, 71%, 40%),
+//     9: hsl(224, 64%, 33%),
+//   ),
+// ) !default;
 
 $gradients: (
   1: linear-gradient(to right, #43cea2, #185a9d),
