--- a/scss/base/_timing.scss
+++ b/scss/base/_timing.scss
@@ -4,14 +4,12 @@
 
 @use '../core' as *;
 
-$custom-prop-name: '';
-
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
 @mixin vars {
   :root {
-    @include generate-css-vars(theme(timing), $custom-prop-name);
+    @include generate-css-vars(theme(timing));
   }
 }
