--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -2,8 +2,8 @@
   Example: hsl(182deg, 50%, 25%) -> 182deg 50% 25%. */
 /* Return the prefix of the css vars if configured */
 /* Returns the css custom property */
-/* A wrapper for var(), for consuming a CSS custom
-  property with the given name prefixed if configured.
+/* A wrapper for var() that prefixes the custom property
+  name if configured.
   Example: css-var(c-green-5) -> var(--koi-c-green-5) */
 /* Generate CSS custom properties (vars) from theme property map.
   Example:  @include generate-css-vars(theme(shadow), shadow); */
