--- a/scss/core/generators/_vars.scss
+++ b/scss/core/generators/_vars.scss
@@ -2,9 +2,6 @@
 //   CSS Custom Props Generator (vars)
 // ------------------------------------
 
-@use 'sass:meta';
-@use 'sass:string';
-
 @use '../helpers/internal' as *;
 @use '../helpers/color' as *;
 
@@ -17,7 +14,7 @@
 @mixin generate-css-vars($map: (), $property: null) {
   /*! purgecss start ignore */
   @each $key, $value in $map {
-    @include css-var($property, $key, $value);
+    @include custom-property($property, $key, $value);
   }
   /*! purgecss end ignore */
 }
@@ -25,11 +22,11 @@
 @mixin generate-css-color-vars($colors-map: (), $property: null, $suffix: null) {
   /*! purgecss start ignore */
   @each $color, $value in $colors-map {
-    @include css-color-var($property, $value, $color, $suffix);
+    @include color-custom-property($property, $value, $color, $suffix);
 
     // Accent colors
     .accent-#{'' + $color} {
-      @include css-color-var(accent, $value, $suffix: $suffix);
+      @include color-custom-property(accent, $value, $suffix: $suffix);
     }
   }
   /*! purgecss end ignore */
@@ -38,7 +35,7 @@
 @mixin generate-color-scheme-css-vars($colors-map: (), $color-scheme: null, $suffix: null) {
   /*! purgecss start ignore */
   @each $color, $value in $colors-map {
-    @include css-color-var(c-#{$color}, $value, $color-scheme, $suffix: $suffix);
+    @include color-custom-property(c-#{$color}, $value, $color-scheme, $suffix);
   }
   /*! purgecss end ignore */
 }
