--- a/scss/core/api/_color.scss
+++ b/scss/core/api/_color.scss
@@ -2,7 +2,6 @@
 //   Color
 // --------------------------------
 
-@use '../helpers/color' as *;
 @use '../helpers/internal' as *;
 @use 'config' as *;
 @use 'theme' as *;
@@ -14,26 +13,21 @@ $-default-accent: config(fallbacks, accent);
 //   Functions
 // --------------------------------
 
-// @debug to-hsl(theme(colors, red, 5));
-// @debug hsl-values(theme(colors, red, 5));
-
 @function color($name, $shade: $-default-shade, $alpha: 1) {
   @if is-scheme-color($name, $shade) {
-    // @return hsl(css-var(c-#{$name}-#{$shade}), $alpha);
     @return css-var(c-#{$name}-#{$shade});
   } @else if is-scheme-color($name) {
-    // @return hsl(css-var(c-#{$name}), $alpha);
     @return css-var(c-#{$name});
   } @else if is-theme-color($name, $shade) {
-    @return to-hsl(theme(colors, $name, $shade), $alpha);
+    @return rgba(theme(colors, $name, $shade), $alpha);
   } @else if is-theme-color($name) {
-    @return to-hsl(theme(colors, $name), $alpha);
+    @return rgba(theme(colors, $name), $alpha);
   } @else {
     @error "Color #{$name}-#{$shade} not found in theme.";
   }
 }
 
 @function accent($shade: $-default-shade, $alpha: 1) {
-  $fallback-accent: to-hsl(theme(colors, $-default-accent, $shade), $alpha);
+  $fallback-accent: rgba(theme(colors, $-default-accent, $shade), $alpha);
   @return css-var(accent-#{$shade}, $fallback-accent);
 }
