--- a/scss/core/helpers/_internal.scss
+++ b/scss/core/helpers/_internal.scss
@@ -6,7 +6,6 @@
 @use 'sass:meta';
 
 @use '../api/config' as *;
-@use 'color' as *;
 
 // --------------------------------
 //   Functions
@@ -53,11 +52,11 @@
 // Output a CSS custom property (CSS var) color
 @mixin color-custom-property($property, $value, $color: null, $suffix: null) {
   @if meta.type-of($value) == 'color' {
-    #{-css-var-name($property, $color, $suffix)}: to-hsl($value);
+    #{-css-var-name($property, $color, $suffix)}: $value;
   } @else {
     @each $shade, $shade-value in $value {
       $key: if($color and $shade, '#{$color}-#{$shade}', $shade);
-      #{-css-var-name($property, $key, $suffix)}: to-hsl($shade-value);
+      #{-css-var-name($property, $key, $suffix)}: $shade-value;
     }
   }
 }
