--- a/scss/core/helpers/_string.scss
+++ b/scss/core/helpers/_string.scss
@@ -5,7 +5,7 @@
 @use 'sass:list';
 @use 'sass:string';
 
-// Recursevelu replace search string in string
+// Recursevely replace search string in string
 // with a given replace string.
 //
 // @param {string} $string
