--- a/scss/core/helpers/_internal.scss
+++ b/scss/core/helpers/_internal.scss
@@ -2,10 +2,13 @@
 //   Internal helpers
 // --------------------------------
 
+@use 'sass:color';
 @use 'sass:string';
 @use 'sass:meta';
 
 @use '../api/config' as *;
+@use 'string' as *;
+@use 'color' as *;
 
 // --------------------------------
 //   Functions
@@ -30,8 +33,9 @@
 
 /* A wrapper for var() that prefixes the custom property
   name if configured.
-  Example: css-var(c-green-5) -> var(--koi-c-green-5) */
+  Example: css-var(--c-green-5) -> var(--koi-c-green-5) */
 @function css-var($name, $fallback: null) {
+  $name: replace($name, '--', '');
   $var-name: string.unquote(-css-var-name($name));
   @if $fallback {
     @return var($var-name, $fallback);
@@ -43,20 +47,52 @@
 //   Mixins
 // --------------------------------
 
-// Output a CSS custom property (CSS var)
-@mixin custom-property($property, $key, $value) {
+// Output a CSS custom property (CSS var) definition
+@mixin custom-prop($property, $key, $value) {
   $value: if(meta.type-of($value) == 'string', string.unquote($value), $value);
   #{-css-var-name($property, $key)}: $value;
 }
 
-// Output a CSS custom property (CSS var) color
-@mixin color-custom-property($property, $value, $color: null, $suffix: null) {
+// Output a CSS custom property (CSS var) color definition
+@mixin color-custom-prop($property, $color-name: null, $value, $suffix: null) {
   @if meta.type-of($value) == 'color' {
-    #{-css-var-name($property, $color, $suffix)}: $value;
+    #{-css-var-name($property, $color-name, $suffix)}: $value;
   } @else {
     @each $shade, $shade-value in $value {
-      $key: if($color and $shade, '#{$color}-#{$shade}', $shade);
+      $key: if($color-name and $shade, '#{$color-name}-#{$shade}', $shade);
       #{-css-var-name($property, $key, $suffix)}: $shade-value;
+    }
+  }
+}
+
+// Output a CSS custom property (CSS var) hsl color definition
+@mixin hsl-color-custom-prop($property, $color-name: null, $value, $suffix: null) {
+  @if meta.type-of($value) == 'color' {
+    $hsl-color: to-hsl($value);
+
+    #{-css-var-name($property, $color-name, h)}: hue($hsl-color);
+    #{-css-var-name($property, $color-name, s)}: saturation($hsl-color);
+    #{-css-var-name($property, $color-name, l)}: lightness($hsl-color);
+
+    #{-css-var-name($property, $color-name, $suffix)}: hsl(
+      css-var(-css-var-name($property, $color-name, h)),
+      css-var(-css-var-name($property, $color-name, s)),
+      css-var(-css-var-name($property, $color-name, l))
+    );
+  } @else {
+    @each $shade, $shade-value in $value {
+      $hsl-color: to-hsl($shade-value);
+      $key: if($color-name and $shade, '#{$color-name}-#{$shade}', $shade);
+
+      #{-css-var-name($property, $key, h)}: hue($hsl-color);
+      #{-css-var-name($property, $key, s)}: saturation($hsl-color);
+      #{-css-var-name($property, $key, l)}: lightness($hsl-color);
+
+      #{-css-var-name($property, $key, $suffix)}: hsl(
+        css-var(-css-var-name($property, $key, h)),
+        css-var(-css-var-name($property, $key, s)),
+        css-var(-css-var-name($property, $key, l))
+      );
     }
   }
 }
