--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -7,13 +7,12 @@
 @use '../core/helpers/internal' as *;
 @use 'tokens' as *;
 
-/* The CSS variables can be access as name-color,
-  example: var(--bg-1-color). */
+/* The Color scheme specific CSS variables can be
+  access as: var(--c-surface-1). */
 
 $color-schemes: (
   light: (
     surface: (
-      // 1: css-var(clr-gray-0),
       1: map.get($tokens, colors, gray, 0),
       2: map.get($tokens, colors, white),
       3: map.get($tokens, colors, gray, 1),
@@ -28,7 +27,7 @@ $color-schemes: (
     code-bg: map.get($tokens, colors, gray, 9),
     code-text: map.get($tokens, colors, gray, 1),
     quote-text: map.get($tokens, colors, gray, 8),
-    quote-border: map.get($tokens, colors, red, 6),
+    quote-border: map.get($tokens, colors, primary, 6),
   ),
   dark: (
     surface: (
